--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:ui": "rm -rf build && cd ../part_2/phonebook/ && npm run build --prod && cp -r build ../../part_3",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -29,6 +30,7 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.22.0",
     "nodemon": "^2.0.7"
   }
 }
